--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4244,5 +4244,6 @@
     "CL_CF_CP_friday": "جمعة",
     "CL_CF_CP_saturday": "السبت",
     "CL_CF_CP_sunday": "الأحد",
-    "CL_DV_OV_delay_start_end_desc": "يمكنك تأخير برنامج الطهي عن طريق تحديد وقت البدء أو وقت الانتهاء المفضل لديك. بمجرد اختيار أحدهما، سيتم حساب الآخر تلقائيًا."
+    "CL_DV_OV_delay_start_end_desc": "يمكنك تأخير برنامج الطهي عن طريق تحديد وقت البدء أو وقت الانتهاء المفضل لديك. بمجرد اختيار أحدهما، سيتم حساب الآخر تلقائيًا.",
+    "drink_inventory": "مخزون المشروبات"
 }
