--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4244,5 +4244,6 @@
     "CL_CF_CP_friday": "петък",
     "CL_CF_CP_saturday": "Събота",
     "CL_CF_CP_sunday": "неделя",
-    "CL_DV_OV_delay_start_end_desc": "Можете да забавите вашата програма за готвене, като зададете предпочитания начален или краен час. След като изберете единия, другият ще бъде изчислен автоматично."
+    "CL_DV_OV_delay_start_end_desc": "Можете да забавите вашата програма за готвене, като зададете предпочитания начален или краен час. След като изберете единия, другият ще бъде изчислен автоматично.",
+    "drink_inventory": "Опис на напитки"
 }
