--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4244,5 +4244,6 @@
     "CL_CF_CP_friday": "יוֹם שִׁישִׁי",
     "CL_CF_CP_saturday": "שַׁבָּת",
     "CL_CF_CP_sunday": "יוֹם רִאשׁוֹן",
-    "CL_DV_OV_delay_start_end_desc": "אתה יכול לעכב את תוכנית הבישול שלך על ידי הגדרת שעת ההתחלה או הסיום המועדפת עליך. לאחר שתבחר אחד, השני יחושב אוטומטית."
+    "CL_DV_OV_delay_start_end_desc": "אתה יכול לעכב את תוכנית הבישול שלך על ידי הגדרת שעת ההתחלה או הסיום המועדפת עליך. לאחר שתבחר אחד, השני יחושב אוטומטית.",
+    "drink_inventory": "מלאי משקאות"
 }
