--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4244,5 +4244,6 @@
     "CL_CF_CP_friday": "金曜日",
     "CL_CF_CP_saturday": "土曜日",
     "CL_CF_CP_sunday": "日曜日",
-    "CL_DV_OV_delay_start_end_desc": "開始時間または終了時間を設定することで、調理プログラムを遅らせることができます。どちらか一方を選択すると、もう一方は自動的に計算されます。"
+    "CL_DV_OV_delay_start_end_desc": "開始時間または終了時間を設定することで、調理プログラムを遅らせることができます。どちらか一方を選択すると、もう一方は自動的に計算されます。",
+    "drink_inventory": "ドリンク在庫"
 }
