--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4244,5 +4244,6 @@
     "CL_CF_CP_friday": "петок",
     "CL_CF_CP_saturday": "сабота",
     "CL_CF_CP_sunday": "недела",
-    "CL_DV_OV_delay_start_end_desc": "Можете да ја одложите програмата за готвење со поставување на претпочитаното време за почеток или крај. Откако ќе изберете еден, другиот автоматски ќе се пресметува."
+    "CL_DV_OV_delay_start_end_desc": "Можете да ја одложите програмата за готвење со поставување на претпочитаното време за почеток или крај. Откако ќе изберете еден, другиот автоматски ќе се пресметува.",
+    "drink_inventory": "Инвентар за пијалоци"
 }
