--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4244,5 +4244,6 @@
     "CL_CF_CP_friday": "fredag",
     "CL_CF_CP_saturday": "lørdag",
     "CL_CF_CP_sunday": "søndag",
-    "CL_DV_OV_delay_start_end_desc": "Du kan forsinke dit madlavningsprogram ved at indstille enten dit foretrukne start- eller sluttidspunkt. Når du har valgt en, vil den anden automatisk blive beregnet."
+    "CL_DV_OV_delay_start_end_desc": "Du kan forsinke dit madlavningsprogram ved at indstille enten dit foretrukne start- eller sluttidspunkt. Når du har valgt en, vil den anden automatisk blive beregnet.",
+    "drink_inventory": "Drikkevareopgørelse"
 }
