--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4244,5 +4244,6 @@
     "CL_CF_CP_friday": "Vendredi",
     "CL_CF_CP_saturday": "Samedi",
     "CL_CF_CP_sunday": "Dimanche",
-    "CL_DV_OV_delay_start_end_desc": "Vous pouvez retarder votre programme de cuisson en définissant votre heure de début ou de fin préférée. Une fois que vous avez choisi l'une des deux, l'autre sera automatiquement calculée."
+    "CL_DV_OV_delay_start_end_desc": "Vous pouvez retarder votre programme de cuisson en définissant votre heure de début ou de fin préférée. Une fois que vous avez choisi l'une des deux, l'autre sera automatiquement calculée.",
+    "drink_inventory": "Inventaire des boissons"
 }
