--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4244,5 +4244,6 @@
     "CL_CF_CP_friday": "วันศุกร์",
     "CL_CF_CP_saturday": "วันเสาร์",
     "CL_CF_CP_sunday": "วันอาทิตย์",
-    "CL_DV_OV_delay_start_end_desc": "คุณสามารถเลื่อนโปรแกรมการปรุงอาหารได้โดยตั้งเวลาเริ่มต้นหรือสิ้นสุดที่ต้องการ เมื่อเลือกเวลาหนึ่งแล้ว ระบบจะคำนวณเวลาที่เหลือให้โดยอัตโนมัติ"
+    "CL_DV_OV_delay_start_end_desc": "คุณสามารถเลื่อนโปรแกรมการปรุงอาหารได้โดยตั้งเวลาเริ่มต้นหรือสิ้นสุดที่ต้องการ เมื่อเลือกเวลาหนึ่งแล้ว ระบบจะคำนวณเวลาที่เหลือให้โดยอัตโนมัติ",
+    "drink_inventory": "สินค้าคงคลังเครื่องดื่ม"
 }
