--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4244,5 +4244,7 @@
     "CL_CF_CP_friday": "جمعه",
     "CL_CF_CP_saturday": "شنبه",
     "CL_CF_CP_sunday": "یکشنبه",
-    "CL_DV_OV_delay_start_end_desc": "شما می توانید با تنظیم زمان شروع یا پایان دلخواه برنامه پخت خود را به تاخیر بیاندازید. هنگامی که یکی را انتخاب کردید، دیگری به طور خودکار محاسبه می شود."
+    "CL_DV_OV_delay_start_end_desc": "شما می توانید با تنظیم زمان شروع یا پایان دلخواه برنامه پخت خود را به تاخیر بیاندازید. هنگامی که یکی را انتخاب کردید، دیگری به طور خودکار محاسبه می شود.",
+    "drink_inventory": "موجودی نوشیدنی",
+    "ac_statistice_content": "این داده‌های آماری مبتنی بر آمارهای شبکه و بخشی از داده‌های مبتنی بر شرایط اندازه‌گیری‌شده در آزمایشگاه، فقط جهت اطلاع کاربران است."
 }
