--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4244,5 +4244,7 @@
     "CL_CF_CP_friday": "Пятница",
     "CL_CF_CP_saturday": "Суббота",
     "CL_CF_CP_sunday": "Воскресенье",
-    "CL_DV_OV_delay_start_end_desc": "Вы можете отложить программу приготовления пищи, установив желаемое время начала или окончания. После того, как вы выбрали одно, другое будет рассчитано автоматически."
+    "CL_DV_OV_delay_start_end_desc": "Вы можете отложить программу приготовления пищи, установив желаемое время начала или окончания. После того, как вы выбрали одно, другое будет рассчитано автоматически.",
+    "drink_inventory": "Инвентарь для напитков",
+    "ac_statistice_content": "Эти статистические данные основаны на сетевой статистике, и часть данных основана на измеренных в лабораторных условиях, только для справки пользователей."
 }
