--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4244,5 +4244,7 @@
     "CL_CF_CP_friday": "петак",
     "CL_CF_CP_saturday": "Субота",
     "CL_CF_CP_sunday": "недеља",
-    "CL_DV_OV_delay_start_end_desc": "Можете да одложите свој програм кувања тако што ћете подесити жељено време почетка или завршетка. Када одаберете један, други ће бити аутоматски израчунат."
+    "CL_DV_OV_delay_start_end_desc": "Можете да одложите свој програм кувања тако што ћете подесити жељено време почетка или завршетка. Када одаберете један, други ће бити аутоматски израчунат.",
+    "drink_inventory": "Инвентар пића",
+    "ac_statistice_content": "Ови статистички подаци се заснивају на мрежној статистици, а део података се заснива на лабораторијским условима мерења, само за кориснике."
 }
