--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4244,5 +4244,7 @@
     "CL_CF_CP_friday": "П'ятниця",
     "CL_CF_CP_saturday": "Субота",
     "CL_CF_CP_sunday": "неділя",
-    "CL_DV_OV_delay_start_end_desc": "Ви можете відкласти програму приготування, встановивши бажаний час початку або закінчення. Коли ви виберете один, інший буде розраховано автоматично."
+    "CL_DV_OV_delay_start_end_desc": "Ви можете відкласти програму приготування, встановивши бажаний час початку або закінчення. Коли ви виберете один, інший буде розраховано автоматично.",
+    "drink_inventory": "Інвентаризація напоїв",
+    "ac_statistice_content": "Ці статистичні дані базуються на мережевій статистиці, а частина даних базується на умовах лабораторії, тільки для користувачів."
 }
