--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -4244,5 +4244,7 @@
     "CL_CF_CP_friday": "piatok",
     "CL_CF_CP_saturday": "sobota",
     "CL_CF_CP_sunday": "nedeľu",
-    "CL_DV_OV_delay_start_end_desc": "Program varenia môžete odložiť nastavením preferovaného času začiatku alebo konca. Po výbere jedného sa automaticky vypočíta druhý."
+    "CL_DV_OV_delay_start_end_desc": "Program varenia môžete odložiť nastavením preferovaného času začiatku alebo konca. Po výbere jedného sa automaticky vypočíta druhý.",
+    "drink_inventory": "Nápojový inventár",
+    "ac_statistice_content": "Tieto štatistické údaje sú založené na štatistikách siete a časť údajov je založená na laboratórnych podmienkach meraných, len pre používateľov na referenciu."
 }
