--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4244,5 +4244,7 @@
     "CL_CF_CP_friday": "Thứ sáu",
     "CL_CF_CP_saturday": "Thứ bảy",
     "CL_CF_CP_sunday": "Chủ nhật",
-    "CL_DV_OV_delay_start_end_desc": "Bạn có thể trì hoãn chương trình nấu ăn của mình bằng cách thiết lập thời gian bắt đầu hoặc kết thúc mong muốn. Sau khi bạn chọn một, thời gian còn lại sẽ được tự động tính toán."
+    "CL_DV_OV_delay_start_end_desc": "Bạn có thể trì hoãn chương trình nấu ăn của mình bằng cách thiết lập thời gian bắt đầu hoặc kết thúc mong muốn. Sau khi bạn chọn một, thời gian còn lại sẽ được tự động tính toán.",
+    "drink_inventory": "Đồ uống tồn kho",
+    "ac_statistice_content": "Dữ liệu thống kê này dựa trên số liệu thống kê mạng và một phần dữ liệu dựa trên các điều kiện phòng thí nghiệm được đo, chỉ phục vụ cho mục đích tham khảo của người dùng."
 }
