--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4244,5 +4244,12 @@
     "CL_CF_CP_friday": "शुक्रवार",
     "CL_CF_CP_saturday": "शनिवार",
     "CL_CF_CP_sunday": "रविवार",
-    "CL_DV_OV_delay_start_end_desc": "आप अपने पसंदीदा प्रारंभ या समाप्ति समय को सेट करके अपने खाना पकाने के कार्यक्रम में देरी कर सकते हैं। एक बार जब आप एक चुन लेते हैं, तो दूसरे की गणना स्वचालित रूप से की जाएगी।"
+    "CL_DV_OV_delay_start_end_desc": "आप अपने पसंदीदा प्रारंभ या समाप्ति समय को सेट करके अपने खाना पकाने के कार्यक्रम में देरी कर सकते हैं। एक बार जब आप एक चुन लेते हैं, तो दूसरे की गणना स्वचालित रूप से की जाएगी।",
+    "drink_inventory": "पेय सूची",
+    "ac_statistice_content": "यह सांख्यिकीय डेटा नेटवर्क सांख्यिकियों पर आधारित है, और डेटा का हिस्सा प्रयोगशाला स्थितियों पर मापा गया है, केवल उपयोगकर्ताओं के संदर्भ के लिए।",
+    "CL_CF_FM_x_items_selected": "*** आइटम चयनित",
+    "CL_CF_FM_remove_items": "आइटम हटाएँ",
+    "p_try_again": "कृपया पुन: प्रयास करें",
+    "exit_report_i": "निकास रिपोर्टिंग समस्या",
+    "AW": "अरूबा"
 }
