--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4244,5 +4244,12 @@
     "CL_CF_CP_friday": "жұма",
     "CL_CF_CP_saturday": "сенбі",
     "CL_CF_CP_sunday": "жексенбі",
-    "CL_DV_OV_delay_start_end_desc": "Таңдаулы басталу немесе аяқталу уақытын орнату арқылы пісіру бағдарламасын кейінге қалдыра аласыз. Біреуін таңдағаннан кейін екіншісі автоматты түрде есептеледі."
+    "CL_DV_OV_delay_start_end_desc": "Таңдаулы басталу немесе аяқталу уақытын орнату арқылы пісіру бағдарламасын кейінге қалдыра аласыз. Біреуін таңдағаннан кейін екіншісі автоматты түрде есептеледі.",
+    "drink_inventory": "Сусынды түгендеу",
+    "ac_statistice_content": "Бұл статистикалық деректер желілік статистикаларға негізделген және бір бөлігі деректер лабораториялық шарттарында мөлшерленген, тек пайдаланушылардың сілтемесі үшін.",
+    "CL_CF_FM_x_items_selected": "*** элементтер таңдалды",
+    "CL_CF_FM_remove_items": "Элементтерді жою",
+    "p_try_again": "қайталап көріңіз",
+    "exit_report_i": "ЕСЕП БЕРУ МӘСЕЛЕСІН ШЫҒУ",
+    "AW": "Аруба"
 }
