--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4244,5 +4244,12 @@
     "CL_CF_CP_friday": "Παρασκευή",
     "CL_CF_CP_saturday": "Σάββατο",
     "CL_CF_CP_sunday": "Κυριακή",
-    "CL_DV_OV_delay_start_end_desc": "Μπορείτε να καθυστερήσετε το πρόγραμμα μαγειρέματος ρυθμίζοντας είτε την προτιμώμενη ώρα έναρξης είτε λήξης. Αφού επιλέξετε το ένα, το άλλο θα υπολογιστεί αυτόματα."
+    "CL_DV_OV_delay_start_end_desc": "Μπορείτε να καθυστερήσετε το πρόγραμμα μαγειρέματος ρυθμίζοντας είτε την προτιμώμενη ώρα έναρξης είτε λήξης. Αφού επιλέξετε το ένα, το άλλο θα υπολογιστεί αυτόματα.",
+    "drink_inventory": "Απογραφή ποτών",
+    "ac_statistice_content": "Αυτά τα στατιστικά δεδομένα βασίζονται σε στατιστικές δικτύου και μέρος των δεδομένων βασίζεται σε εργαστηριακές συνθήκες που μετρήθηκαν, μόνο για αναφορά χρηστών.",
+    "CL_CF_FM_x_items_selected": "Επιλέχθηκαν *** στοιχεία",
+    "CL_CF_FM_remove_items": "Κατάργηση αντικειμένων",
+    "p_try_again": "δοκιμάστε ξανά",
+    "exit_report_i": "ΕΞΟΔΟΣ ΖΗΤΗΜΑΤΟΣ ΑΝΑΦΟΡΑΣ",
+    "AW": "αρούμπα"
 }
