--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -148,7 +148,7 @@
     "ac_wind_direction": "Fan Direction",
     "ac_ai": "AI",
     "ac_has_close": "Closed",
-    "ac_people_feel_wind": "AI wind",
+    "ac_people_feel_wind": "AI Wind",
     "ac_sleep": "Sleep",
     "ac_mute": "Quiet mode",
     "ac_save_energy": "Energy-saving",
@@ -4244,5 +4244,12 @@
     "CL_CF_CP_friday": "Friday",
     "CL_CF_CP_saturday": "Saturday",
     "CL_CF_CP_sunday": "Sunday",
-    "CL_DV_OV_delay_start_end_desc": "You can delay your cooking program by setting either your preferred start or end time. Once you've chosen one, the other will be automatically calculated."
+    "CL_DV_OV_delay_start_end_desc": "You can delay your cooking program by setting either your preferred start or end time. Once you've chosen one, the other will be automatically calculated.",
+    "drink_inventory": "Drink Inventory",
+    "ac_statistice_content": "This statistical data is based on network statistics, and part of the data is based on laboratory conditions measured, only for user’s reference. ",
+    "CL_CF_FM_x_items_selected": "*** items selected",
+    "CL_CF_FM_remove_items": "Remove Items",
+    "p_try_again": "please try again",
+    "exit_report_i": "EXIT REPORTING ISSUE",
+    "AW": "Aruba"
 }
