--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4244,5 +4244,12 @@
     "CL_CF_CP_friday": "Jumat",
     "CL_CF_CP_saturday": "Sabtu",
     "CL_CF_CP_sunday": "Minggu",
-    "CL_DV_OV_delay_start_end_desc": "Anda dapat menunda program memasak dengan mengatur waktu mulai atau berakhir yang Anda inginkan. Setelah memilih salah satu, waktu lainnya akan dihitung secara otomatis."
+    "CL_DV_OV_delay_start_end_desc": "Anda dapat menunda program memasak dengan mengatur waktu mulai atau berakhir yang Anda inginkan. Setelah memilih salah satu, waktu lainnya akan dihitung secara otomatis.",
+    "drink_inventory": "Inventaris Minuman",
+    "ac_statistice_content": "Data statistik ini didasarkan pada statistik jaringan, dan sebagian data didasarkan pada kondisi laboratorium yang diukur, hanya untuk referensi pengguna.",
+    "CL_CF_FM_x_items_selected": "*** item dipilih",
+    "CL_CF_FM_remove_items": "Hapus Item",
+    "p_try_again": "silahkan coba lagi",
+    "exit_report_i": "MASALAH PELAPORAN KELUAR",
+    "AW": "aruba"
 }
