--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4244,5 +4244,12 @@
     "CL_CF_CP_friday": "금요일",
     "CL_CF_CP_saturday": "토요일",
     "CL_CF_CP_sunday": "일요일",
-    "CL_DV_OV_delay_start_end_desc": "선호하는 시작 시간이나 종료 시간을 설정하여 요리 프로그램을 지연할 수 있습니다. 하나를 선택하면 다른 하나가 자동으로 계산됩니다."
+    "CL_DV_OV_delay_start_end_desc": "선호하는 시작 시간이나 종료 시간을 설정하여 요리 프로그램을 지연할 수 있습니다. 하나를 선택하면 다른 하나가 자동으로 계산됩니다.",
+    "drink_inventory": "음료 재고",
+    "ac_statistice_content": "이 통계 데이터는 네트워크 통계를 기반으로 하며, 일부 데이터는 실험실 조건에서 측정된 것으로 사용자 참고용입니다.",
+    "CL_CF_FM_x_items_selected": "*** 선택된 항목",
+    "CL_CF_FM_remove_items": "항목 제거",
+    "p_try_again": "다시 시도해주세요",
+    "exit_report_i": "종료 보고 문제",
+    "AW": "아루바"
 }
