--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4244,5 +4244,12 @@
     "CL_CF_CP_friday": "fredag",
     "CL_CF_CP_saturday": "lørdag",
     "CL_CF_CP_sunday": "søndag",
-    "CL_DV_OV_delay_start_end_desc": "Du kan forsinke tilberedningsprogrammet ved å angi enten ønsket start- eller sluttid. Når du har valgt en, vil den andre automatisk beregnes."
+    "CL_DV_OV_delay_start_end_desc": "Du kan forsinke tilberedningsprogrammet ved å angi enten ønsket start- eller sluttid. Når du har valgt en, vil den andre automatisk beregnes.",
+    "drink_inventory": "Drikkelager",
+    "ac_statistice_content": "Disse statistiske dataene er basert på nettverksstatistikk, og en del av dataene er basert på laboratorieforhold som er målt, kun for brukernes referanse.",
+    "CL_CF_FM_x_items_selected": "*** elementer valgt",
+    "CL_CF_FM_remove_items": "Fjern elementer",
+    "p_try_again": "vennligst prøv igjen",
+    "exit_report_i": "AVSLUTT RAPPORTERINGSPROBLEM",
+    "AW": "Aruba"
 }
