--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -282,7 +282,7 @@
     "pind_function_warm_up": "Aquecer",
     "pind_function_grill": "Grelhar",
     "pind_function_hestan_mode": "Modo Celsius°Cooking™",
-    "pind_function_hestan_slow": "Cozimento lento ou sous vide",
+    "pind_function_hestan_slow": "Cozedura lenta ou Sous-vide",
     "pind_function_hestan_boil": "Ferver/cozinhar com água",
     "pind_function_hestan_heat": "Aquecer-se e fritar",
     "pind_set_temperature": "Regular temperatura",
@@ -538,7 +538,7 @@
     "heat_mode_regenerate": "Sistema de reaquecimento/regeneração",
     "heat_mode_descale": "Descalcificar",
     "heat_mode_mw_defrost": "Descongelamento Mw",
-    "heat_mode_sousvide": "Sous Vide",
+    "heat_mode_sousvide": "Sous-vide",
     "heat_mode_low_temp_steam": "Vapor de baixa temperatura",
     "heat_mode_steam": "Vapor",
     "heat_mode_quick": "Rápido",
@@ -564,7 +564,7 @@
     "LOWER": "INFERIOR",
     "UPPER": "SUPERIOR",
     "HYGIENE": "HIGIENE",
-    "CRYSTAL_GLASS": "VIDRO CRISTAL",
+    "CRYSTAL_GLASS": "VIDRO DE CRISTAL",
     "QUICK_PRO_WASH": "LAVAGEM RÁPIDA PRO",
     "SELF_CLEANING": "AUTOLIMPEZA",
     "NORMAL_MODE": "MODO NORMAL",
@@ -1311,7 +1311,7 @@
     "register_success": "Registo bem-sucedido",
     "register_fail": "Falha no registo",
     "reset_psw_success_tips": "A palavra-passe da sua conta ConnectLife foi reposta.",
-    "pt_camera": "permissão da câmara",
+    "pt_camera": "autorização da câmara",
     "fail": "Falha",
     "privacty_policy": "Política de privacidade",
     "update_userprofile_failed": "A atualização do perfil do utilizador falhou.",
@@ -1319,7 +1319,7 @@
     "bottls_removed": "Garrafas removidas",
     "warning": "aviso",
     "error": "Erro",
-    "image_crop": "Corte de imagem",
+    "image_crop": "Recorte de imagem",
     "email_has_registered_tips": "Este e-mail já está registrado.",
     "email_has_not_registered_tips": "Este e-mail não foi registado.",
     "request_fail_tips": "O pedido falhou. Tente novamente mais tarde.",
@@ -1336,14 +1336,14 @@
     "view_wine_data": "VER DADOS DO VINHO",
     "picture_not_exist": "A imagem não existe.",
     "verification_code_error": "Código de verificação incorreto",
-    "reset_password_error": "Erro de definição de palavra-passe",
+    "reset_password_error": "Erro na definição da palavra-passe",
     "switchs": "MUDAR",
     "light_modes": "MODOS DE ILUMINAÇÃO",
     "automatic_date_and_time": "Data e hora automáticas",
     "select_how_light_modes": "selecionar como os modos de iluminação correspondem às ações do utilizador",
-    "light_mode_settings": "CONFIGURAÇÕES DOS MODOS DE ILUMINAÇÃO",
+    "light_mode_settings": "DEFINIÇÕES DOS MODOS DE ILUMINAÇÃO",
     "function_mode": "Modo de função",
-    "shelf_lights": "Luzes de prateleira",
+    "shelf_lights": "Luzes da prateleira",
     "rgb_light": "Luz RGB",
     "rgb_lights_colour": "Cor da luz RGB",
     "on_for": "Ligado para",
@@ -1354,16 +1354,16 @@
     "Inventory_type_detail_title": "Mudar o tipo de gestão de inventário.",
     "Inventory_type_detail_generic_change_to_exact": "Mudar o tipo de gestão de inventário de Genérico para Exato colocará todos os seus vinhos em posições não colocadas. Pode posicioná-los digitalizando os rótulos das garrafas.",
     "Inventory_type_detail_exact_change_to_generic": "Alterar o tipo de gestão de inventário de Exato para Genérico fará com que perca todos os dados relacionados com a posição da garrafa.",
-    "service_tickets": "Pedidos de serviço",
-    "service_order_id": "ID DE PEDIDO DE SERVIÇO",
-    "claim_id": "ID DE RECLAMAÇÃO",
+    "service_tickets": "Pedidos de assistência",
+    "service_order_id": "ID DO PEDIDO DE ASSISTÊNCIA",
+    "claim_id": "ID DA RECLAMAÇÃO",
     "new_firmware_update_title": "Atualização de firmware disponível",
-    "show_only_unplaced": "Mostrar apenas não colocados",
-    "show_only_removed": "Mostrar apenas removidos",
-    "show_only_favourite": "Mostrar apenas favoritos",
+    "show_only_unplaced": "Mostrar apenas os não colocados",
+    "show_only_removed": "Mostrar apenas os removidos",
+    "show_only_favourite": "Mostrar apenas os favoritos",
     "request_permissions": "Esta aplicação pode não funcionar corretamente sem as permissões solicitadas.",
     "select_vintage": "Selecionar colheita",
-    "appliance_offline": "Eletrodoméstico offline",
+    "appliance_offline": "Dispositivo offline",
     "register_privacy_policy_tips_new": "A utilização desta aplicação está sujeita a Contrato de Licença de Utilizador Final. Pode clicar em baixo para concordar com o Contrato de Licença de Utilizador Final e com a Política de Proteção de Dados, ou cancelar para sair desta aplicação.",
     "access_failed": "O acesso falhou.",
     "delete_account": "Eliminar conta",
@@ -4244,5 +4244,12 @@
     "CL_CF_CP_friday": "Sexta-feira",
     "CL_CF_CP_saturday": "Sábado",
     "CL_CF_CP_sunday": "Domingo",
-    "CL_DV_OV_delay_start_end_desc": "Você pode atrasar seu programa de cozimento definindo seu horário de início ou término preferido. Depois de escolher um, o outro será calculado automaticamente."
+    "CL_DV_OV_delay_start_end_desc": "Você pode atrasar seu programa de cozimento definindo seu horário de início ou término preferido. Depois de escolher um, o outro será calculado automaticamente.",
+    "drink_inventory": "Inventário de bebidas",
+    "ac_statistice_content": "Estes dados estatísticos são baseados em estatísticas de rede, e parte dos dados é baseada em condições de laboratório medidas, apenas para referência dos usuários.",
+    "CL_CF_FM_x_items_selected": "*** itens selecionados",
+    "CL_CF_FM_remove_items": "Remover itens",
+    "p_try_again": "por favor tente novamente",
+    "exit_report_i": "PROBLEMA DE RELATÓRIO DE SAÍDA",
+    "AW": "Aruba"
 }
