--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4244,5 +4244,12 @@
     "CL_CF_CP_friday": "vineri",
     "CL_CF_CP_saturday": "sâmbătă",
     "CL_CF_CP_sunday": "duminică",
-    "CL_DV_OV_delay_start_end_desc": "Vă puteți întârzia programul de gătit setând fie ora de început, fie cea de sfârșit. După ce ați ales unul, celălalt va fi calculat automat."
+    "CL_DV_OV_delay_start_end_desc": "Vă puteți întârzia programul de gătit setând fie ora de început, fie cea de sfârșit. După ce ați ales unul, celălalt va fi calculat automat.",
+    "drink_inventory": "Inventarul băuturilor",
+    "ac_statistice_content": "Aceste date statistice se bazează pe statisticile rețelei, iar o parte din date se bazează pe condițiile de laborator măsurate, doar pentru referință de către utilizator.",
+    "CL_CF_FM_x_items_selected": "*** articole selectate",
+    "CL_CF_FM_remove_items": "Eliminați articole",
+    "p_try_again": "vă rugăm să încercați din nou",
+    "exit_report_i": "PROBLEMA DE RAPORTARE LA IEȘI",
+    "AW": "Aruba"
 }
